# pdf-manager

./: README.md  main.py  pyproject.toml  requirements.txt
pdf_manager/: __init__.py  cli.py  title_sync.py
